--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Query String Decoder</title>
-  <script type="text/javascript" src="encode.js"></script>
+  <script type="text/javascript" src="decode.js"></script>
 </head>
 <body>
   <script>
-    window.onload = encode
+    window.onload = decode
   </script>
 </body>
 </html>
